packages/webassemblyjs/test/fixtures/type-errors/wrong-loop-result/module.wast
(module 
  (func (result i32)
    (loop (result f32)
      (f32.const 0)
    )
    (i32.eqz)
    (i32.const 0)
  )
)
